--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
         (click)="increment()">+1</button>
 <button class="fz-60 p-50 m-20"
         (click)="decrement()"
-        [disabled]="cannotDecrement">-1</button>
+        [disabled]="cannotDecrement$ | async">-1</button>
 <button class="fz-60 p-50 m-20"
         (click)="clear()"
-        [disabled]="cannotDecrement">=0</button>
+        [disabled]="cannotDecrement$ | async">=0</button>
 
-<p class="fz-60">Счетчик = {{counter}}</p>
+<p class="fz-60">Счетчик = {{count$ | async}}</p>
 <p *ngIf="updatedAt" class="fz-60">Обновлено {{updatedAt | date:"HH:mm:ss dd.MM.yyy"}}</p>
