NGRX-4 added ngrx effect for updateAt

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
         [disabled]="cannotDecrement$ | async">=0</button>
 
 <p class="fz-60">Счетчик = {{count$ | async}}</p>
-<p *ngIf="updatedAt" class="fz-60">Обновлено {{updatedAt | date:"HH:mm:ss dd.MM.yyy"}}</p>
+<p *ngIf="updatedAt$ | async" class="fz-60">Обновлено {{updatedAt$ | async | date:"HH:mm:ss dd.MM.yyy"}}</p>
